[gd_scene load_steps=26 format=3 uid="uid://diddx2n0x26di"]

[ext_resource type="Texture2D" uid="uid://bxfgbldve4t1" path="res://assets/Character/Skeleton/skeleton.png" id="1_pbvs3"]
[ext_resource type="Script" uid="uid://bc7yxytlcrn5w" path="res://scripts/skeleton.gd" id="1_txkty"]
[ext_resource type="Texture2D" uid="uid://cltu18nsnwfpn" path="res://assets/Character/Skeleton/skeleton_fight.png" id="3_ivqcw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pbvs3"]
radius = 12.0
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_txkty"]
atlas = ExtResource("1_pbvs3")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivqcw"]
atlas = ExtResource("1_pbvs3")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghshk"]
atlas = ExtResource("1_pbvs3")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e85v8"]
atlas = ExtResource("1_pbvs3")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjsi3"]
atlas = ExtResource("1_pbvs3")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nhjk"]
atlas = ExtResource("1_pbvs3")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f63t1"]
atlas = ExtResource("3_ivqcw")
region = Rect2(0, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6rpr"]
atlas = ExtResource("3_ivqcw")
region = Rect2(32, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_6yhqa"]
atlas = ExtResource("3_ivqcw")
region = Rect2(64, 0, 32, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnirc"]
atlas = ExtResource("1_pbvs3")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pgwy"]
atlas = ExtResource("1_pbvs3")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssl1b"]
atlas = ExtResource("1_pbvs3")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4hcs"]
atlas = ExtResource("1_pbvs3")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_haw2w"]
atlas = ExtResource("1_pbvs3")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0f3v"]
atlas = ExtResource("1_pbvs3")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrus2"]
atlas = ExtResource("1_pbvs3")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e1v2"]
atlas = ExtResource("1_pbvs3")
region = Rect2(96, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rjsi3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txkty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivqcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghshk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e85v8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghshk")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjsi3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nhjk")
}],
"loop": false,
"name": &"deathsleep",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f63t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6rpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6yhqa")
}],
"loop": false,
"name": &"hit",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnirc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pgwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssl1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4hcs")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_haw2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0f3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrus2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7e1v2")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_txkty"]
radius = 141.032

[sub_resource type="RectangleShape2D" id="RectangleShape2D_txkty"]
size = Vector2(23, 9)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ivqcw"]
size = Vector2(30, 10.5)

[node name="Skeleton" type="CharacterBody2D"]
script = ExtResource("1_txkty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_pbvs3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(2.41016, 2.41016)
sprite_frames = SubResource("SpriteFrames_rjsi3")
animation = &"hit"
autoplay = "hit"
frame = 2
frame_progress = 1.0

[node name="detector" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_txkty")

[node name="death" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death"]
position = Vector2(-1.5, -14)
shape = SubResource("RectangleShape2D_txkty")

[node name="death2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="death2"]
position = Vector2(-1, 2.75)
shape = SubResource("RectangleShape2D_ivqcw")

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_shape_exited" from="detector" to="." method="_on_detector_body_shape_exited"]
[connection signal="body_entered" from="death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="death2" to="." method="_on_death_2_body_entered"]
